--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "flashcard-gemini",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://TLChuong14104.github.io/AI-Flashcard",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
@@ -33,8 +36,10 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.21",
+    "cpy-cli": "^6.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.16",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
